moved controller widget to its own directory

--- a/src/station/templates/index.html
+++ b/src/station/templates/index.html
@@ -6,12 +6,12 @@
 
 {% include "headers.html" %}
 
-<script>{% include "widgets/controller.js" %}</script>
+<script>{% include "widgets/controller/controller.js" %}</script>
 
   </head>
   <body>
     <div x-data x-cloak x-show="true" class="vstack">
-{% include "widgets/controller.html" %}
+{% include "widgets/controller/controller.html" %}
     </div>
 
     <!--keep last-->
