--- a/src/station/templates/widgets/controller/controller.html
+++ b/src/station/templates/widgets/controller/controller.html
@@ -12,7 +12,7 @@
                 @release.window="mouseUp($event.detail);"
                 @reset.window="clearBuffer();"
             >
-{% include "widgets/controller.svg" %}
+{% include "widgets/controller/controller.svg" %}
             </div>
             <div x-text="feedback"></div>
         </div>
