--- a/src/station/templates/headers.html
+++ b/src/station/templates/headers.html
@@ -1,7 +1,8 @@
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-<script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
-<script src="https://cdn.socket.io/4.6.0/socket.io.min.js" integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+" crossorigin="anonymous"></script>
+<link href="static/libs/bootstrap@5.3.0/bootstrap.min.css" rel="stylesheet">
+<script defer src="static/libs/alpinejs@3.12.2/cdn.js" type="text/javascript"></script>
+<script src="static/libs/lodash@4.17.21/lodash.min.js" type="text/javascript"></script>
+<script src="static/libs/socket.io@4.6.0/socket.io.min.js" type="text/javascript"></script>
+<script src="static/libs/jmuxer@2.0.5/jmuxer.min.js" type="text/javascript"></script>
 <style>
 [x-cloak] {
     display: none !important;
