--- a/src/station/templates/headers.html
+++ b/src/station/templates/headers.html
@@ -1,4 +1,5 @@
 <link href="static/libs/bootstrap@5.3.0/bootstrap.min.css" rel="stylesheet">
+<script defer src="static/libs/alpinejs.persist@3.12.2/cdn.min.js" type="text/javascript"></script>
 <script defer src="static/libs/alpinejs@3.12.2/cdn.js" type="text/javascript"></script>
 <script src="static/libs/lodash@4.17.21/lodash.min.js" type="text/javascript"></script>
 <script src="static/libs/socket.io@4.6.0/socket.io.min.js" type="text/javascript"></script>
